2424 [x265] fixed default encoding mode part II
2423 [x265] fixed default encoding mode
2422 [x265] added basic x265 encoding support
2421 [Log] do not log progress messages from the FFMpeg encoder
2420 delete devil.dll in the MeGUI root folder if avisynth.dll is not available also
2419 [Update] added possibility to use display names for the update files
              added possibility to use .NET requirements for the update files
              improved error handling and log output
2418 [Main] improved Windows 7/8 support
2417 [Queue] fixed crash when opening the right click menu (regression of 2402)
2416 [Log] added .NET 4.5.1 detection
2415 [Log] added Windows 8.1 detection
2414 [x264] if --bluray-compat is used without a BluRay device selected:
            --ref is restricted to 6
            --bframes is restricted to 3
            --slices 4 is not forced anymore 
2413 [OneClick] fixed option to set a language by default if it cannot be determined (regression of 2363)
2412 [Update] enabled megui.xvidvideo.ru again
2411 [x264] fixed wrong number format of the zone modifier in same cases
2410 [Settings] sort the default languages alphabetically
2409 [Update] fixed grammar/spelling errors
2408 [AviSynth] fixed DirectShowSource in non-portable mode (regression of 2406)
2407 [Update] disabled megui.xvidvideo.ru mirror as it is out of sync
2406 [AviSynth] only load portable DirectShowSource.dll if portable mode is used
2405 [Log] improved avs log information
2404 [MediaInfo] ignore phantom audio tracks
2403 [M2TS Muxer] added A_LPCM as Audio Codec ID for WAV/PCM files. Bug #730
2402 [Queue] extended "Open" option to open input/output files/folders and in any job state if available
2401 [Audio Encoder] fixed TimeStretch support for 23.976 <--> 25 fps conversion (regression of 2383)
2400 [MediaInfo] added log output if fps cannot be determined
2399 [x264] if --bluray-compat is used without a BluRay device selected:
            --open-gop is not forced anymore