@@ -1,6 +1,6 @@
 // ****************************************************************************
 // 
-// Copyright (C) 2005-2012 Doom9 & al
+// Copyright (C) 2005-2013 Doom9 & al
 // 
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -38,6 +38,7 @@ namespace MeGUI
         IYUV    = I420
     }
 
+    [SerializableAttribute]
 	public class AviSynthException:ApplicationException
 	{
 		public AviSynthException(SerializationInfo info, StreamingContext context) : base(info, context)
@@ -67,33 +68,20 @@ namespace MeGUI
 		FLOAT = 16
 	};
 
-	public sealed class AviSynthScriptEnvironment: IDisposable
+	public sealed class AviSynthScriptEnvironment:IDisposable
 	{
-		public static string GetLastError()
-		{
-            return null;	
-		}
-
 		public AviSynthScriptEnvironment()
 		{
-		}
-
-		public IntPtr Handle
-		{
-			get
-			{
-				return new IntPtr(0);
-			}
-		}
+        }
 
         public AviSynthClip OpenScriptFile(string filePath, AviSynthColorspace forceColorspace)
         {
-            return new AviSynthClip("Import", filePath, forceColorspace, this);
+            return new AviSynthClip("Import", filePath, forceColorspace);
         }
 
         public AviSynthClip ParseScript(string script, AviSynthColorspace forceColorspace)
         {
-            return new AviSynthClip("Eval", script, forceColorspace, this);
+            return new AviSynthClip("Eval", script, forceColorspace);
         }
 
 
@@ -107,9 +95,9 @@ namespace MeGUI
             return ParseScript(script, AviSynthColorspace.RGB24);
         }		
 
-		void IDisposable.Dispose()
+		public void Dispose()
 		{
-			
+
 		}
 	}
 
@@ -162,6 +150,7 @@ namespace MeGUI
         private AVSDLLVideoInfo _vi;
         private AviSynthColorspace _colorSpace;
         private AudioSampleType _sampleType;
+        private static object _locker = new object();
 
 #if dimzon
 
@@ -440,7 +429,7 @@ namespace MeGUI
                 throw new AviSynthException(getLastError());
         }
 
-        public AviSynthClip(string func, string arg , AviSynthColorspace forceColorspace, AviSynthScriptEnvironment env)
+        public AviSynthClip(string func, string arg , AviSynthColorspace forceColorspace)
 		{
 			_vi = new AVSDLLVideoInfo();
             _avs =  new IntPtr(0);
@@ -448,58 +437,58 @@ namespace MeGUI
             _sampleType = AudioSampleType.Unknown;
             bool bOpenSuccess = false;
 
-            if (MainForm.Instance.Settings.OpenAVSInThreadDuringSession)
+            lock (_locker)
             {
-                MainForm.Instance.AvsLock++;
-
-                Thread t = new Thread(new ThreadStart(delegate
+                if (MainForm.Instance.Settings.OpenAVSInThreadDuringSession)
                 {
-                    System.Windows.Forms.Application.UseWaitCursor = true;
+                    Thread t = new Thread(new ThreadStart(delegate
+                    {
+                        System.Windows.Forms.Application.UseWaitCursor = true;
+                        if (0 == dimzon_avs_init_2(ref _avs, func, arg, ref _vi, ref _colorSpace, ref _sampleType, forceColorspace.ToString()))
+                            bOpenSuccess = true;
+                        System.Windows.Forms.Application.UseWaitCursor = false;
+                    }));
+                    t.Start();
+
+                    while (t.ThreadState == ThreadState.Running)
+                    {
+                        System.Windows.Forms.Application.DoEvents();
+                        Thread.Sleep(100);
+                    }
+                }
+                else
+                {
                     if (0 == dimzon_avs_init_2(ref _avs, func, arg, ref _vi, ref _colorSpace, ref _sampleType, forceColorspace.ToString()))
                         bOpenSuccess = true;
-                    MainForm.Instance.AvsLock--;
-                    if (MainForm.Instance.AvsLock == 0)
-                        System.Windows.Forms.Application.UseWaitCursor = false;
-                }));
-                t.Start();
-
-                while (t.ThreadState == ThreadState.Running)
-                {
-                    System.Windows.Forms.Application.DoEvents();
-                    Thread.Sleep(100);
                 }
-            }
-            else
-            {
-                if (0 == dimzon_avs_init_2(ref _avs, func, arg, ref _vi, ref _colorSpace, ref _sampleType, forceColorspace.ToString()))
-                    bOpenSuccess = true;
             }
 
             if (bOpenSuccess == false)
             {
                 string err = getLastError();
-                cleanup(false);
+                Dispose(false);
                 throw new AviSynthException(err);
             }
 		}
 
-		private void cleanup(bool disposing)
-		{
-            dimzon_avs_destroy(ref _avs);
-            _avs = new IntPtr(0);
-			if(disposing)
-				GC.SuppressFinalize(this);
-		}
-
 		~AviSynthClip()
 		{
-			cleanup(false);
+			Dispose(false);
 		}
 
-		void IDisposable.Dispose()
+		public void Dispose()
 		{
-			cleanup(true);
+			Dispose(true);
 		}
+
+        protected virtual void Dispose(bool disposing)
+        {
+            dimzon_avs_destroy(ref _avs);
+            _avs = new IntPtr(0);
+            if (disposing)
+                GC.SuppressFinalize(this);
+        }
+
 		public short BitsPerSample
 		{
 			get
@@ -507,6 +496,7 @@ namespace MeGUI
 				return (short)(BytesPerSample*8);
 			}
 		}
+
 		public short BytesPerSample
 		{
 			get
